<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/sign_up_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:id="@+id/start"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="20dp"
                        android:text="@string/start"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:textAlignment="center"
                        android:textSize="30sp"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/name"
                        app:errorEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:inputType="text"
                            android:textColor="@color/colorWhite"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lastname_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/lastname"
                        app:errorEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lastname_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:inputType="text"
                            android:textColor="@color/colorWhite"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/cellphone_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/cellphone"
                        app:errorEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/cellphone_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:inputType="phone"
                            android:textColor="@color/colorWhite"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/carrer_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/carrer"
                        app:errorEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/carrer_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:inputType="text"
                            android:textColor="@color/colorWhite"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <Spinner
                        android:id="@+id/spinnerLevel"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:entries="@array/item_levels"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/institutional_mail"
                        app:errorEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorWhite"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/promp_password"
                        app:errorEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:inputType="textPassword"
                            android:textColor="@color/colorWhite"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/repassword_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/repromp_password"
                        app:errorEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/repassword_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:inputType="textPassword"
                            android:textColor="@color/colorWhite"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/buttonAddUser"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/borde_redondo"
                        app:rippleColor="@color/colorWhite"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
</layout>