<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@mipmap/ic_logo"/>
                    <TextView
                        android:id="@+id/welcome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="Welcome"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="35sp"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/promp_email"
                        app:errorEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="8dp"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorWhite"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="?android:textAppearanceSmall"
                        android:layout_marginTop="16dp"
                        android:text="@string/loggin"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/borde_redondo"/>
                    <TextView
                        android:id="@+id/txtRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="30sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/developers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/developers"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:paddingTop="60dp"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
</layout>